Updated Tomcat module with configration for web.xml
Also added
-java_version
-catalina_opts